--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>
       Sonar - Letting & Estate Agents
     </title>
-    <link rel="shortcut icon" type="image/jpg" href="images/favicon.jpg"/>
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
